<resources>
    <string name="app_name">KindaWK</string>
    <string name="app_authority">com.vvsemir.kindawk</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My profile</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="friends">Friends</string>
    <string name="messages">Messages</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="refresh">Refresh</string>
    <string name="add_photo">Add Photo</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="confirm_delete_photos">Delete selected photos?</string>
    <string name="settingsDatePosted">Date Posted:</string>
    <string name="settingsCheckDelay">Check for new posts:</string>
    <string-array name="settingsDatePosted_array">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Last 7 days</item>
        <item>Last 30 days</item>
    </string-array>
    <string-array name="settingsCheckDelay_array">
        <item>never</item>
        <item>every 5 minutes</item>
        <item>every 15 minutes</item>
        <item>every 60 minutes</item>
    </string-array>
</resources>
