<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorPrimary" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBgTabs"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tabGravity="fill">

        <android.support.design.widget.TabItem
            android:id="@+id/tabProfile"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/profile" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabFriends"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/friends" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabNews"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/news" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/userViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />



</android.support.constraint.ConstraintLayout>